Fix whitespace after nested lists

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6,
 hr, p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: 25px;
+  margin-bottom: 25px !important;
 }
 
 
